--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -18,7 +18,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
-    "just-percentile": "1.0.1"
+    "just-percentile": "1.0.1",
+    "express": "4.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.4",
