--- a/nodejs/.babelrc
+++ b/nodejs/.babelrc
@@ -1,13 +1,3 @@
 {
-  presets: [
-    [
-      '@babel/preset-env',
-      {
-        modules: false
-      }
-    ]
-  ],
-  plugins: [
-    'react-hot-loader/babel'
-  ]
+  "presets": ["@babel/preset-env", "@babel/preset-react"]
 }
